@@ -3,10 +3,14 @@
 #define _RPMPYTHON_INTERNAL
 #include "rpmpython.h"
 
+#if defined(WITH_PYTHON_EMBED)
+#include <cStringIO.h>
+#endif
+
 #include "debug.h"
 
 /*@unchecked@*/
-int _rpmpython_debug = 0;
+int _rpmpython_debug = 1;
 
 static void rpmpythonFini(void * _python)
         /*@globals fileSystem @*/
@@ -39,6 +43,13 @@ static rpmpython rpmpythonGetPool(/*@null@*/ rpmioPool pool)
     return (rpmpython) rpmioGetPool(pool, sizeof(*python));
 }
 
+static const char * initStringIO = "\
+import sys\n\
+from cStringIO import StringIO\n\
+stdout = sys.stdout\n\
+sys.stdout = StringIO()\n\
+";
+
 rpmpython rpmpythonNew(const char * fn, int flags)
 {
     rpmpython python = rpmpythonGetPool(_rpmpythonPool);
@@ -48,7 +59,10 @@ rpmpython rpmpythonNew(const char * fn, int flags)
     python->flags = flags;
 
 #if defined(WITH_PYTHONEMBED)
-    Py_Initialize();
+	Py_Initialize();
+	if (PycStringIO == NULL)
+	    PycStringIO = PyCObject_Import("cStringIO", "cStringIO_CAPI");
+	(void) rpmpythonRun(python, initStringIO, NULL);
 #endif
 
     return rpmpythonLink(python);
@@ -58,23 +72,23 @@ rpmRC rpmpythonRunFile(rpmpython python, const char * fn, const char ** resultp)
 {
     rpmRC rc = RPMRC_FAIL;
 
+
 if (_rpmpython_debug)
 fprintf(stderr, "==> %s(%p,%s)\n", __FUNCTION__, python, fn);
 
     if (fn != NULL) {
 #if defined(WITH_PYTHONEMBED)
-	FILE * fp = fopen(fn, "rb");
-	if (fp != NULL) {
-	    PyRun_SimpleFileExFlags(fp, fn, 1, NULL);
+	const char * pyfn = ((fn == NULL || !strcmp(fn, "-")) ? "<stdin>" : fn);
+	FILE * pyfp = (!strcmp(pyfn, "<stdin>") ? stdin : fopen(fn, "rb"));
+	int closeit = (pyfp != stdin);
+	PyCompilerFlags cf = { .cf_flags = 0 };
+	
+	if (pyfp != NULL) {
+	    PyRun_AnyFileExFlags(pyfp, pyfn, closeit, &cf);
 	    rc = RPMRC_OK;
 	}
 #endif
-#ifdef	NOTYET
-	if (resultp)
-	    *resultp = Tcl_GetStringResult(python->I);
-#endif
     }
-exit:
     return rc;
 }
 
@@ -83,16 +97,32 @@ rpmRC rpmpythonRun(rpmpython python, const char * str, const char ** resultp)
     rpmRC rc = RPMRC_FAIL;
 
 if (_rpmpython_debug)
-fprintf(stderr, "==> %s(%p,%s)\n", __FUNCTION__, python, str);
+fprintf(stderr, "==> %s(%p,%s,%p)\n", __FUNCTION__, python, str, resultp);
 
     if (str != NULL) {
 #if defined(WITH_PYTHONEMBED)
-	PyRun_SimpleStringFlags(str, NULL);
-	rc = RPMRC_OK;
-#ifdef	NOTYET
-	if (resultp)
-	    *resultp = Tcl_GetStringResult(python->I);
-#endif
+	PyCompilerFlags cf = { .cf_flags = 0 };
+	PyObject * m = PyImport_AddModule("__main__");
+	PyObject * d = (m ? PyModule_GetDict(m) : NULL);
+	PyObject * v = (m ? PyRun_StringFlags(str, Py_file_input, d, d, &cf) : NULL);
+
+        if (v == NULL) {
+	    PyErr_Print();
+	} else {
+	    if (resultp != NULL) {
+		PyObject * sys_stdout = PySys_GetObject("stdout");
+		if (sys_stdout != NULL && PycStringIO_OutputCheck(sys_stdout)) {
+		    PyObject * o = (*PycStringIO->cgetvalue)(sys_stdout);
+		    *resultp = (PyString_Check(o) ? PyString_AsString(o) : "");
+		} else
+		    *resultp = "";
+	    }
+	   
+	    Py_DECREF(v);
+	    if (Py_FlushLine())
+		PyErr_Clear();
+	    rc = RPMRC_OK;
+	}
 #endif
     }
     return rc;
